--- a/leaderboard.html
+++ b/leaderboard.html
@@ -148,7 +148,7 @@
     Donec fringilla tristique eros a varius. Proin odio nisi, porttitor vestibulum sem in, pellentesque sagittis lorem. 
     Phasellus nisl arcu, laoreet in euismod in, auctor sit amet lorem. In porttitor ut velit ut ultricies. 
     Praesent vel pharetra dolor. In hac habitasse platea dictumst. Phasellus venenatis tortor vitae orci volutpat hendrerit. 
-    Fusce iaculis porttitor ultricies. Vivamus vel justo eu lectus volutpat vestibulum.  <a href="leaderboard_extended.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
+    Fusce iaculis porttitor ultricies. Vivamus vel justo eu lectus volutpat vestibulum.  <a href="login.html" onclick="localStorage.setItem('oramaFromIndex', 'true')" class="text-red-600 hover:text-black transition font-medium inline-flex items-center gap-1">
             See an extended version of a current leaderboard →
           </a>
   </p>
