--- a/login.html
+++ b/login.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leaderboard</title>
+  <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
   <style>
     body {
       font-family: 'Space Grotesk', sans-serif;
     }
-  </style>
 
-  <style>
-  /* Custom Scrollbar Styles */
-    /* For Webkit browsers (Chrome, Safari, Edge) */
+    ::selection {
+      background: #d1181e;
+      color: white;
+    }
+
     ::-webkit-scrollbar {
       width: 12px;
       height: 12px;
@@ -29,89 +31,26 @@
       background: #d1181e;
       border-radius: 6px;
       border: 2px solid #1a0000;
-      transition: background 0.3s ease;
     }
 
     ::-webkit-scrollbar-thumb:hover {
       background: #ff4444;
-      border-color: #000000;
     }
 
-    ::-webkit-scrollbar-thumb:active {
-      background: #b91016;
-    }
-
-    /* For Firefox */
     * {
       scrollbar-width: thin;
       scrollbar-color: #d1181e #1a0000;
     }
-
-    /* Optional: Hide scrollbar during loading phases */
-    body.loading {
-      overflow: hidden;
-    }
-
-    /* Optional: Custom selection colors to match theme */
-    ::selection {
-      background: #d1181e;
-      color: white;
-    }
-
-    ::-moz-selection {
-      background: #d1181e;
-      color: white;
-    }
-
-    #nav-container {
-      transition: all 0.4s ease;
-      will-change: transform, opacity;
-    }
-
-    #nav-toggle {
-      transition: all 0.3s ease;
-    }
-
-    html {
-  scroll-behavior: smooth;
-}
-
   </style>
-
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
 </head>
-<body class="bg-white text-black font-sans">
+<body class="bg-white text-black flex items-center justify-center min-h-screen">
 
-<!-- Back to Home Button - Left side version -->
-<a href="index.html" 
-   class="fixed bottom-8 left-8 w-14 h-14 bg-black rounded-full shadow-lg flex items-center justify-center hover:bg-gray-800 transition-all hover:scale-110 z-50">
-  <svg class="w-6 h-6 text-white" 
-       fill="none" 
-       stroke="currentColor" 
-       stroke-width="3" 
-       viewBox="0 0 24 24">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
-  </svg>
-</a>
-
-
-
-    <!-- TRANSITION LOADER -->
-<div id="loader" class="fixed inset-0 z-50 bg-black flex flex-col items-center justify-center transition-opacity duration-[2000ms] hidden">
-    <h1 class="text-white text-4xl font-bold tracking-widest mb-4">ORAMA</h1>
-    <div class="flex gap-2">
-      <span class="w-2 h-2 bg-white rounded-full animate-bounce [animation-delay:0ms]"></span>
-      <span class="w-2 h-2 bg-white rounded-full animate-bounce [animation-delay:200ms]"></span>
-      <span class="w-2 h-2 bg-white rounded-full animate-bounce [animation-delay:400ms]"></span>
-    </div>
-  </div>
-
-   <form method="POST" class="bg-white p-8 rounded shadow-md w-full max-w-sm border border-gray-200">
-    <h2 class="text-2xl font-bold mb-4 text-center">Enter Password</h2>
+  <form method="POST" class="bg-white p-8 rounded shadow-lg w-full max-w-sm border border-gray-200">
+    <h2 class="text-2xl font-bold mb-6 text-center">Enter Password</h2>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% for category, message in messages %}
-        <p class="text-{{ 'red' if category == 'error' else 'green' }}-600 text-sm mb-4 text-center">{{ message }}</p>
+        <p class="text-center text-sm mb-4 text-{{ 'red' if category == 'error' else 'green' }}-600">{{ message }}</p>
       {% endfor %}
     {% endwith %}
 
@@ -122,11 +61,10 @@
       required
       class="w-full px-4 py-2 border rounded mb-4 focus:outline-none focus:ring-2 focus:ring-[#d1181e]"
     />
-    <button type="submit" class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15]">
+    <button type="submit" class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15] transition">
       Login
     </button>
   </form>
-
 
 </body>
 </html>
