--- a/login.html
+++ b/login.html
@@ -1,70 +1,48 @@
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
   <style>
     body {
       font-family: 'Space Grotesk', sans-serif;
     }
-
-    ::selection {
-      background: #d1181e;
-      color: white;
-    }
-
-    ::-webkit-scrollbar {
-      width: 12px;
-      height: 12px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: #1a0000;
-      border-radius: 6px;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #d1181e;
-      border-radius: 6px;
-      border: 2px solid #1a0000;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #ff4444;
-    }
-
-    * {
-      scrollbar-width: thin;
-      scrollbar-color: #d1181e #1a0000;
-    }
   </style>
 </head>
-<body class="bg-white text-black flex items-center justify-center min-h-screen">
+<body class="min-h-screen bg-white flex items-center justify-center">
 
-  <form method="POST" class="bg-white p-8 rounded shadow-lg w-full max-w-sm border border-gray-200">
-    <h2 class="text-2xl font-bold mb-6 text-center">Enter Password</h2>
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% for category, message in messages %}
-        <p class="text-center text-sm mb-4 text-{{ 'red' if category == 'error' else 'green' }}-600">{{ message }}</p>
-      {% endfor %}
-    {% endwith %}
+  <div class="bg-gray-100 p-8 rounded shadow-md w-full max-w-md text-center border border-gray-300">
+    <h1 class="text-2xl font-bold mb-6">Enter Password</h1>
 
     <input
       type="password"
-      name="password"
+      id="pwInput"
       placeholder="Password"
-      required
-      class="w-full px-4 py-2 border rounded mb-4 focus:outline-none focus:ring-2 focus:ring-[#d1181e]"
+      class="w-full px-4 py-2 border border-gray-300 rounded mb-4 focus:outline-none focus:ring-2 focus:ring-[#d1181e]"
     />
-    <button type="submit" class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15] transition">
-      Login
+    <button
+      onclick="checkPassword()"
+      class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15] transition"
+    >
+      Enter
     </button>
-  </form>
 
+    <p id="errorMsg" class="text-red-600 mt-4 hidden">Incorrect password. Try again.</p>
+  </div>
+
+  <script>
+    function checkPassword() {
+      const pw = document.getElementById('pwInput').value;
+      const errorMsg = document.getElementById('errorMsg');
+
+      if (pw === "orama2025") {
+        window.location.href = "leaderboard_extended.html";
+      } else {
+        errorMsg.classList.remove("hidden");
+      }
+    }
+  </script>
 </body>
 </html>
