--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
       font-family: 'Space Grotesk', sans-serif;
     }
   </style>
+
+  <link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+<link rel="apple-touch-icon" href="img/logo.png">
 </head>
 <body class="min-h-screen bg-white flex items-center justify-center">
 
