--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     />
 
     <!-- reCAPTCHA widget -->
-    <div class="g-recaptcha mb-4" data-sitekey="6Lf9aYQrAAAAAAAgjOh1ti_yF-i9VOHbjkEucSuC"></div>
+    <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
 
     <button
       onclick="checkPassword()"
