--- a/login.html
+++ b/login.html
@@ -1,11 +1,10 @@
+<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
-  
   <style>
     body {
       font-family: 'Space Grotesk', sans-serif;
@@ -23,16 +22,22 @@
       placeholder="Password"
       class="w-full px-4 py-2 border border-gray-300 rounded mb-4 focus:outline-none focus:ring-2 focus:ring-[#d1181e]"
     />
+    <button
+      onclick="checkPassword()"
+      class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15] transition"
+    >
+      Enter
+    </button>
 
-
+    <p id="errorMsg" class="text-red-600 mt-4 hidden">Incorrect password. Try again.</p>
+  </div>
 
   <script>
     function checkPassword() {
       const pw = document.getElementById('pwInput').value;
-      const recaptchaResponse = grecaptcha.getResponse();
       const errorMsg = document.getElementById('errorMsg');
 
-      if (pw === "orama2025" && recaptchaResponse) {
+      if (pw === "orama2025") {
         window.location.href = "leaderboard_extended.html";
       } else {
         errorMsg.classList.remove("hidden");
@@ -41,4 +46,3 @@
   </script>
 </body>
 </html>
-
