--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     }
   </style>
 
+  <style>
   /* Custom Scrollbar Styles */
     /* For Webkit browsers (Chrome, Safari, Edge) */
     ::-webkit-scrollbar {
