--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
   
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
+
+   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("YOUR_USER_ID"); // 🔁 Replace with your EmailJS user ID
+    })();
+  </script>
   
   <style>
     body {
@@ -1153,15 +1160,45 @@ News Item
     <div class="bg-gray-50 p-6 md:p-8 rounded-xl shadow-md h-full">
       <h2 class="text-2xl md:text-3xl font-bold mb-4 md:mb-6 text-black">Contact Us</h2>
       <p class="text-sm md:text-base text-gray-700 mb-4 md:mb-6">Feel free to reach out with any questions or comments.</p>
-      <form method="POST" action="#" class="space-y-4">
-        <input type="text" placeholder="Name" class="w-full px-4 py-3 border border-gray-300 rounded-md text-base" required/>
-        <input type="email" placeholder="Email" class="w-full px-4 py-3 border border-gray-300 rounded-md text-base" required/>
-        <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-3 border border-gray-300 rounded-md text-base resize-none" required></textarea>
-        <button type="submit" class="w-full md:w-auto px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800 transition text-base font-medium">
-          Send Message
-        </button>
-      </form>
+      <form id="contact-form" class="bg-gray-100 p-8 rounded shadow-md w-full max-w-lg space-y-4 border border-gray-300">
+    <h2 class="text-2xl font-bold text-center mb-4">Contact Us</h2>
+
+    <input type="text" name="user_name" placeholder="Your Name" required
+      class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#d1181e]" />
+
+    <input type="email" name="user_email" placeholder="Your Email" required
+      class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#d1181e]" />
+
+    <textarea name="message" placeholder="Your Message" required
+      class="w-full px-4 py-2 border rounded h-32 focus:outline-none focus:ring-2 focus:ring-[#d1181e]"></textarea>
+
+    <button type="submit"
+      class="w-full bg-[#d1181e] text-white py-2 rounded hover:bg-[#a30f15] transition">Send</button>
+
+    <p id="statusMsg" class="text-center mt-4 text-sm hidden"></p>
+  </form>
     </div>
+
+      <script>
+    const form = document.getElementById('contact-form');
+    const statusMsg = document.getElementById('statusMsg');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      emailjs.sendForm('Gmail', 'service_13w1j09', this)
+        .then(() => {
+          statusMsg.textContent = "Message sent successfully!";
+          statusMsg.className = "text-center mt-4 text-green-600";
+          statusMsg.classList.remove("hidden");
+          form.reset();
+        }, (error) => {
+          statusMsg.textContent = "Failed to send message.";
+          statusMsg.className = "text-center mt-4 text-red-600";
+          statusMsg.classList.remove("hidden");
+        });
+    });
+  </script>
     
     <!-- Right: Book a Demo -->
     <div class="bg-gray-50 p-6 md:p-8 rounded-xl shadow-md h-full md:border-l-0">
