--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
     (function(){
-      emailjs.init("YOUR_USER_ID"); // 🔁 Replace with your EmailJS user ID
+      emailjs.init("xLeEPH44w1FxQs58V"); // 🔁 Replace with your EmailJS user ID
     })();
   </script>
   
