--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@ News Item
     form.addEventListener('submit', function(e) {
       e.preventDefault();
 
-      emailjs.sendForm('Gmail', 'service_13w1j09', this)
+      emailjs.sendForm('service_13w1j09', 'Gmail', this)
         .then(() => {
           statusMsg.textContent = "Message sent successfully!";
           statusMsg.className = "text-center mt-4 text-green-600";
