--- a/index.html
+++ b/index.html
@@ -599,12 +599,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
       <div class="w-full md:flex-[1.2]">
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0 mb-6">
-          <span class="text-[#d1181e] font-semibold">Orama Technologies</span> is redefining tactical training through 
-          <span class="text-[#d1181e] font-semibold">AI-powered mixed reality</span>. We're a team of veterans, engineers, and technologists building the most immersive combat simulation platform on the planet. Our goal is simple: 
-          <span class="text-[#d1181e] font-semibold">make training more realistic, more adaptive, and more accessible</span> —because lives depend on it.
+          <span class="text-[#d1181e] font-semibold">Orama Technologies</span> is redefining tactical training through AI-powered mixed reality.
+           Our goal is simple: make training more realistic, more adaptive, and accessible —because lives depend on it.
         </p>
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0">
-          At Orama<span class="text-[#d1181e] font-semibold"> we build systems that prepare warfighters, law enforcement, and allied forces</span> for the realities of <span class="text-[#d1181e] font-semibold"> modern conflict </span> - not outdated scenarios from a different era.
+         Orama has been deployed across military, law enforcement, and allied organizations to prepare operators for the fight ahead, not the war behind. 
         </p>
       </div>
 
