--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
       <div class="w-full md:flex-[1.2]">
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0 mb-6">
-          <span class="text-[#d1181e] font-semibold">Orama Technologies</span> is redefining tactical training through AI-powered mixed reality.
+          <span class="text-[#d1181e] font-semibold">Orama Technologies</span> is redefining tactical training through  <span class="text-[#d1181e] font-semibold"> AI-powered mixed reality</span>.
            Our goal is simple: make training more realistic, more adaptive, and accessible —because lives depend on it.
         </p>
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0">
