--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
       <div class="w-full md:flex-[0.8] flex justify-center">
         <div class="bg-[#1a0000] p-4 rounded-2xl shadow-2xl border-4 border-[#d1181e] transition-transform duration-300 ease-in-out hover:scale-105 w-full max-w-xs sm:max-w-sm md:max-w-md">
-          <img src="img/image_1_1_starter.png"
+          <img src="img/main.png"
                alt="Redefine Training"
                class="w-full object-contain" />
         </div>
