--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ document.addEventListener('DOMContentLoaded', () => {
            Our goal is simple: make training more realistic, more adaptive, and accessible —because lives depend on it.
         </p>
         <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl leading-relaxed text-black max-w-3xl mx-auto md:mx-0">
-         Orama has been deployed across military, law enforcement, and allied organizations to prepare operators for the fight ahead, not the war behind. 
+         Orama has been deployed across military, law enforcement, and allied organizations to <span class="text-[#d1181e] font-semibold"> prepare operators for the fight ahead</span>, not the war behind. 
         </p>
       </div>
 
@@ -769,7 +769,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 text-left text-black text-base leading-relaxed">
         <div class="flex flex-col space-y-2">
           <h4 class="font-bold text-[#d1181e]">Fact 1: Live Fire Fidelity, Zero Risk.</h4>
-          <p>With full-body motion capture, 1:1 weapon replicas, and real-time physics in a 360° MR environment, Orama replicates live-fire CQB with none of the danger.</p>
+          <p>With full-body motion capture, 1:1 weapon replicas, and real-time physics in a 360° <span class="text-[#d1181e] font-semibold"> mixed reality environment</span>, Orama replicates live-fire CQB with none of the danger.</p>
         </div>
         <div class="flex flex-col space-y-2">
           <h4 class="font-bold text-[#d1181e]">Fact 2: Adaptive AI Opponents.</h4>
@@ -777,7 +777,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
         <div class="flex flex-col space-y-2">
           <h4 class="font-bold text-[#d1181e]">Fact 3: Field-Deployable Anywhere</h4>
-          <p>The entire system fits in a Pelican case. Run missions in a FOB tent, police training center, or SOCOM experiment—no internet required.</p>
+          <p>The entire system fits in a Pelican case. Run missions in a FOB tent, <span class="text-[#d1181e] font-semibold"> police precinct </span> , or SOCOM <span class="text-[#d1181e] font-semibold"> headquarters</span>. </p>
         </div>
         <div class="flex flex-col space-y-2">
           <h4 class="font-bold text-[#d1181e]">Fact 4: Real-Time AAR.</h4>
