--- a/article.html
+++ b/article.html
@@ -128,8 +128,7 @@
     <div class="mt-12">
       <h2 class="font-semibold mb-2">Full-Fidelity Combat Training, No Live Fire Needed</h2>
       <p class="text-sm text-gray-700 leading-relaxed">
-Orama’s Mixed Reality Combat Simulator replicates the adrenaline, pressure, and chaos of live fire without a single bullet fired. Using full-body tracking, real-world physics, and 1:1 weapon fidelity, we enable users to engage in real CQB (close quarters battle) missions safely and repeatedly. Real recoil. Real tactics. Real readiness.
-Whether it’s stacked teams breaching a room or lone operators clearing stairwells, the system mimics real-world environments to build neural-muscle memory where it matters most.
+Orama’s Mixed Reality Combat Simulator replicates the pressure, and chaos of live fire training without real ammunition or sim rounds. Using full-body tracking, real-world physics, and 1:1 weapon fidelity, we enable users to engage in real CQB (close quarters battle) missions safely and repeatedly. Real recoil with proven tactics results in real readiness for you. Whether it’s stacked teams breaching a room or lone operators clearing stairwells, the system mimics real-world environments to build neural-muscle memory where it matters most. 
       </p>
     </div>
 
@@ -137,8 +136,7 @@ Whether it’s stacked teams breaching a room or lone operators clearing stairwe
     <div class="mt-12">
       <h2 class="font-semibold mb-2">Train Smarter, Fight Harder</h2>
       <p class="text-sm text-gray-700 leading-relaxed">
-        Our adaptive AI analyzes player behavior and injects variability into every scenario. No two runs are the same. Enemies flank when you pause, counterattack when you overreach, and breach when you stall.
-        Each adversary mimics real-world near-peer tactics: drones, room-clearing, suppression fire, and even ethical judgment pressure points (such as civilians present). This isn't just simulation. It’s algorithmically-driven tactical education.
+       Our adaptive AI analyzes player behavior and injects variability into every scenario. No two runs are the same. Enemies flank when you pause, counterattack when you overreach, and breach when you stall. Each adversary mimics real-world near-peer tactics: drones, room-clearing, suppression fire, and even ethical judgment pressure points (such as civilians present). This isn't just a simulation. It’s algorithmically-driven tactical education.
       </p>
     </div>
 
@@ -158,7 +156,7 @@ Whether it’s stacked teams breaching a room or lone operators clearing stairwe
     <div class="mt-12">
       <h2 class="font-semibold mb-2">Deploy Anywhere, Train Everywhere</h2>
       <p class="text-sm text-gray-700 leading-relaxed">
-       The full MRCS fits in two Pelican cases. No Wi-Fi? No problem. No range? No issue. Whether you’re on a base in Germany or a field exercise in North Carolina, Orama launches in under 30 minutes. The system self-calibrates, connects wirelessly, and delivers a full training pipeline from mission planning to AAR without outside infrastructure.
+      The full ORACLE 1 fits in two Pelican cases. Whether you’re on a base in Germany or a field exercise in North Carolina, Orama launches in under 30 minutes. The system self-calibrates, connects wirelessly, and delivers a full training pipeline from mission planning to AAR without outside infrastructure. 
       </p>
     </div>
 
@@ -166,7 +164,7 @@ Whether it’s stacked teams breaching a room or lone operators clearing stairwe
     <div class="mt-12">
       <h2 class="font-semibold mb-2">Actionable Insights From Every Mission</h2>
       <p class="text-sm text-gray-700 leading-relaxed">
-       Our real-time After Action Review (AAR) engine logs every movement, trigger pull, voice command, and interaction. Instructors can scrub through timelines, replay player perspectives, and even get automatic heat maps, accuracy stats, and decision timing breakdowns. Want to know why your squad failed to breach in time? The AAR doesn’t just tell you. It shows you.
+     Our real-time After Action Review (AAR) engine logs every movement, trigger pull, voice command, and interaction. Instructors can scrub through timelines, replay player perspectives, and even get automatic heat maps, accuracy stats, and decision timing breakdowns. Want to know why your squad failed to breach in time? The AAR doesn’t just tell you. It will guide you into making better decisions like an Oracle does. 
       </p>
     </div>
 
