--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         playsinline
         loop>
         <!-- Desktop video source -->
-        <source src="img/intro-desktop.mp4" type="video/mp4" media="(min-width: 768px)">
+        <source src="img/video for website.mp4" type="video/mp4" media="(min-width: 768px)">
         <!-- Mobile video source -->
         <source src="img/intro.mp4" type="video/mp4" media="(max-width: 767px)">
         <!-- Fallback -->
