--- a/index.html
+++ b/index.html
@@ -678,12 +678,10 @@ document.addEventListener('DOMContentLoaded', () => {
 // Optimized page transition logic
 document.addEventListener('DOMContentLoaded', function () {
   const hasPlayedIntro = sessionStorage.getItem('hasPlayedIntro');
-  const loader = document.getElementById('minimalLoader');
+  const loader = document.getElementById('minimalLoader'); // or whatever your loader ID is
   const videoTransition = document.getElementById('videoTransition');
   const mainWrapper = document.getElementById('mainWrapper');
   const header = document.getElementById('main-header');
-  const navContainer = document.getElementById('nav-container');
-  const toggleButton = document.getElementById('nav-toggle');
   
   // Get both skip buttons
   const mobileSkipButton = document.getElementById('mobileSkipButton');
@@ -707,35 +705,40 @@ document.addEventListener('DOMContentLoaded', function () {
         loader.style.display = 'none';
       }, 300);
     }
-    document.body.style.backgroundColor = '#ffffff';
-    mainWrapper.style.opacity = '1';
-    mainWrapper.style.pointerEvents = 'auto';
-    header.style.opacity = '1';
-    header.style.pointerEvents = 'auto';
+    if (mainWrapper) {
+      document.body.style.backgroundColor = '#ffffff';
+      mainWrapper.style.opacity = '1';
+      mainWrapper.style.pointerEvents = 'auto';
+    }
+    if (header) {
+      header.style.opacity = '1';
+      header.style.pointerEvents = 'auto';
+    }
   };
 
   if (!hasPlayedIntro) {
     // First-time visit: show video intro
     sessionStorage.setItem('hasPlayedIntro', 'true');
 
-    // Faster transition to video (reduced from 2200ms to 800ms)
-    setTimeout(() => {
-      document.getElementById('loader').style.opacity = '0';
-
+    // Show video transition immediately if loader doesn't exist
+    if (loader) {
       setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
+        loader.style.opacity = '0';
+        setTimeout(() => {
+          loader.style.display = 'none';
+          if (videoTransition) {
+            videoTransition.style.opacity = '1';
+            videoTransition.style.pointerEvents = 'auto';
+          }
+        }, 300);
+      }, 800);
+    } else {
+      // No loader, show video immediately
+      if (videoTransition) {
         videoTransition.style.opacity = '1';
         videoTransition.style.pointerEvents = 'auto';
-
-        // Start animations for existing elements only
-        const animationElements = ['mobileLine1', 'mobileLine2', 'mobileLine3', 'mobileLine4', 'desktopLine1', 'desktopLine2', 'desktopLine3', 'desktopLine4', 'leftText', 'rightText'];
-        animationElements.forEach(id => {
-          const el = document.getElementById(id);
-          if (el) el.classList.add('animate-fadeInUp');
-        });
-
-      }, 300); // Faster transition
-    }, 800); // Reduced delay
+      }
+    }
 
     // Video end event listeners
     if (mobileVideo) {
@@ -745,8 +748,8 @@ document.addEventListener('DOMContentLoaded', function () {
       desktopVideo.addEventListener('ended', showMain);
     }
 
-    // Fallback timeout (in case video doesn't fire 'ended' event)
-    setTimeout(showMain, 10000); // 10 seconds fallback
+    // Fallback timeout
+    setTimeout(showMain, 10000);
 
     // Manual skip for both buttons
     if (mobileSkipButton) {
@@ -757,21 +760,21 @@ document.addEventListener('DOMContentLoaded', function () {
     }
 
   } else {
-    // Already visited — skip intro and show minimal loader
+    // Already visited — skip intro
     if (loader) {
       loader.classList.remove('hidden');
       loader.style.opacity = '1';
-
       setTimeout(() => {
         loader.style.opacity = '0';
         setTimeout(showMain, 300);
-      }, 1000); // 1s bounce animation
+      }, 1000);
     } else {
-      // If no loader, show main immediately
+      // No loader, show main immediately
       showMain();
     }
   }
 });
+
 
 
   // Header scroll logic (unchanged)
