--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     }
   </style>
 
+<style>
+  #mainWrapper,
+#main-header {
+  opacity: 1 !important;
+  pointer-events: auto !important;
+}
+
+  </style>
   <!-- Critical inline styles to prevent white flash -->
   <style>
     /* CRITICAL: Set black background immediately */
