--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
       overflow-x: hidden;
     }
     
-    /* Hide everything initially except loader */
-    body > *:not(#loader) {
-      opacity: 0;
-      pointer-events: none;
-    }
+#mainWrapper,
+#main-header,
+#videoTransition {
+  opacity: 0;
+  pointer-events: none;
+  transition: all 1s ease;
+}
     
     #loader {
       opacity: 1 !important;
@@ -1332,6 +1334,38 @@ News Item
 </div>
 
   <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
+  <script>
+window.addEventListener('load', () => {
+  const main = document.getElementById('mainWrapper');
+  const header = document.getElementById('main-header');
+  const loader = document.getElementById('loader');
+  const video = document.getElementById('videoTransition');
+  const minimal = document.getElementById('minimalLoader');
+
+  // Kill all loaders
+  if (loader) loader.style.display = 'none';
+  if (video) {
+    video.style.opacity = '0';
+    video.style.pointerEvents = 'none';
+  }
+  if (minimal) minimal.style.display = 'none';
+
+  // Show main content
+  if (main) {
+    main.style.opacity = '1';
+    main.style.pointerEvents = 'auto';
+  }
+  if (header) {
+    header.style.opacity = '1';
+    header.style.pointerEvents = 'auto';
+  }
+
+  // Fix background color
+  document.body.style.backgroundColor = '#ffffff';
+});
+</script>
+
 
 </body>
 </html>
