--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
   <!-- Critical inline styles to prevent white flash -->
   <style>
+
+        /* CRITICAL: Set black background immediately */
+    html, body {
+      background-color: #000000 !important;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+    }
 #mainWrapper,
 #main-header,
 #videoTransition {
